# LDAQ

./: .gitignore  .readthedocs.yaml  .travis.yml  100 - Dev.ipynb  200 - Dev Klemen.ipynb  200 - Dev Tilen.ipynb  210 - Dev AD2.ipynb  400 - Examples to sphinx.ipynb  CONTRIBUTING.rst  License  README.rst  Showcase - National Instruments.ipynb  Showcase - Serial.ipynb  pyproject.toml  requirements.dev.txt  requirements.txt  server_user_id.txt  setup.py  sync_version.py
.github/workflows/: publish-to-pypi.yml  python-package.yaml  release-and-publish-to-pypi.yml  testing.yaml
LDAQ/: __init__.py  __main__.py  acquisition_base.py  control_base.py  core.py  generation_base.py  utils.py
LDAQ/basler/: __init__.py  acquisition.py
LDAQ/bluetooth/: __init__.py  acquisition.py
LDAQ/dewesoft/: __init__.py  acquisition.py
LDAQ/digilent/: __init__.py  acquisition.py
LDAQ/flir/: __init__.py  acquisition.py
LDAQ/national_instruments/: __init__.py  acquisition.py  generation.py  ni_task.py
LDAQ/serial_communication/: __init__.py  acquisition.py
LDAQ/simulator/: __init__.py  acquisition.py
LDAQ/telops/: __init__.py  acquisition.py
LDAQ/visualization/: flask_app.py  visualization.py  visualization_helpers.py  visualization_js.py
LadiskDAQ/: __init__.py  acquisition.py  acquisition_base.py  control.py  core.py  daqtask.py  dwfconstants.py  flask_app.py  generation.py  generation_base.py  ni_task.py  utils.py  visualization.py  visualization_helpers.py
LadiskDAQ/basler/: acquisition.py
LadiskDAQ/digilent/: acquisition.py  dwfconstants.py
LadiskDAQ/flir/: __init__.py  acquisition.py
LadiskDAQ/national_instruments/: acquisition.py  generation.py  ni_task.py
LadiskDAQ/serial/: acquisition.py
LadiskDAQ/serial_communication/: __init__.py  acquisition.py
LadiskDAQ/simulator/: acquisition.py
LadiskDAQ/templates/: index.html
LadiskDAQ/visualization/: visualization.py  visualization_helpers.py  visualization_js.py
docs/: Makefile  create_example_notebooks.py  make.bat
docs/source/: acquisition.rst  code.rst  conf.py  custom_acquisitions_and_generations.rst  examples.rst  generation.rst  getting_started.rst  index.rst  installation.rst  multiple_sources.rst  ni_task.rst  (+7 more)
examples/: 000_acquisition_analog_discovery2.ipynb  001_acquisition_serial_bytes.ipynb  001_acquisition_serial_simple.ipynb  002 - acqusition_NI + visualization.py  002_acquisition_NI.ipynb  002_acquisition_NI_IEPE.ipynb  002_acquisition_dewesoft_siriusx.ipynb  002_acquisition_dewesoft_siriusx_gui.ipynb  003_acquisition_Basler.ipynb  004_acquisition_FLIR_visualization.ipynb  005_acquisition_multiple.ipynb  006_acquisition_generation_visualization.ipynb  007_acquisition_check_events.ipynb  008_acquisition_virtual_channel.ipynb  009_acquisition_simulated_data_and_video.ipynb  010_visualization_advanced.ipynb  011_acquisition_simulated_app_performance.ipynb  012_periodic_saving_example.ipynb  013_acquisition_Telops_synchronized.ipynb  014_acquisition_Telops_buffered_synchronized.ipynb  0_acquisition_analog_discovery2.ipynb  0_acquisition_analog_discovery2_simple.ipynb  10_visualization_advanced.ipynb  11_acquisition_simulated_app_performance.ipynb  12_acquisition_bluetooth.ipynb  12_periodic_saving_example.ipynb  1_acquisition_serial_bytes.ipynb  1_acquisition_serial_simple.ipynb  2_acquisition_NI_simple.ipynb  3_acquisition_Basler_simple.ipynb  4_acquisition_FLIR_visualization.ipynb  4_acquisition_FLIR_visualization_TORUN.ipynb  5_acquisition_multiple.ipynb  6_acquisition_generation_visualization.ipynb  7_acquisition_check_events.ipynb  8_acquisition_virtual_channel.ipynb  9_acquisition_simulated.ipynb  9_acquisition_simulated_data_and_video.ipynb  9_visualization_advanced_TODO.ipynb  basic_example.py  (+2 more)
sdypy_template_project/: __init__.py  __main__.py  core.py  visualize.py
tests/: conftest.py  test_acquisition_base.py  test_basic.py  test_conftest_smoke.py  test_core.py  test_integration.py  test_ni_acquisition.py  test_simulator.py  test_telops.py  test_thread_safety.py  test_trigger.py  test_utils.py  test_virtual_channels.py
(+19 files in other folders)
