[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LDAQ"
version = "1.0.1"
authors = [{name = "Tilen Košir, Klemen Zaletelj, Janko Slavič", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Tilen Košir, Klemen Zaletelj", email = "klemen.zaletelj@fs.uni-lj.si"}]
license = "MIT"
description = "Data acquisition and generation with live visualization."
readme = "README.rst"
keywords = ["data acquisition", "data generation", "live visualization"]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.11.0",
    "scipy>=1.2.0",
    "pyqtgraph",
    "matplotlib",
    "PyQt5>=5.15.6",
    "beautifultable>=1.1.0",
    "dill",
    "keyboard",
    "pyTrigger",
    "PyDAQmx>=1.3",
    "sphinx-copybutton",
    "pyserial",
    "nidaqmx>=0.8.0",
    "openpyxl",
    "pandas>=2.0.0",
    "urllib3<2.0",
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "sphinx-rtd-theme",
    "nbsphinx",
    "nbsphinx_link",
    "jupyter",
    "sphinx-book-theme",
]

[project.urls]
homepage = "https://github.com/ladisk/LDAQ"
documentation = "https://ldaq.readthedocs.io/en/latest/"
source = "https://github.com/ladisk/LDAQ"
